--- a/mongo-sharding-repl-cashe-balance-discovery/compose.yaml
+++ b/mongo-sharding-repl-cashe-balance-discovery/compose.yaml
@@ -7,12 +7,13 @@ services:
     depends_on:
       - mongos_router
     ports:
-      - 8080:8080
+      - "8080:8080"
     networks:
       - app-network
     environment:
       MONGODB_URL: "mongodb://mongos_router:27020"
       MONGODB_DATABASE_NAME: "somedb"
+      REDIS_URL: "redis://redis_1:6379"
 
   configSrv:
     image: mongo:latest
@@ -92,7 +93,6 @@ services:
       - "27019:27019"
     networks:
       - app-network
-    #        ipv4_address: 173.17.0.8
     volumes:
       - shard2-data:/data/db
     command:
@@ -205,6 +205,18 @@ services:
       interval: 5s
       start_period: 10s
 
+  redis_1:
+    image: "redis:latest"
+    container_name: redis_1
+    ports:
+      - "6379"
+    volumes:
+      - redis_1_data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+    command: [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+    networks:
+      - app-network
+
 volumes:
   config-data:
   shard1-data:
@@ -213,6 +225,7 @@ volumes:
   shard2-repl1-data:
   shard1-repl2-data:
   shard2-repl2-data:
+  redis_1_data: {}
 
 networks:
   app-network:
